--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "private": true,
-  "repository": "https://github.com/piotrwitek/react-redux-typescript-realworld-app.git",
   "homepage": "https://damianlewandowski.github.io/worder-frontend",
   "license": "MIT",
-  "main": "src/index.tsx",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -21,7 +19,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "axios": "0.18.0",
+    "axios": "^0.19.2",
     "connected-react-router": "6.4.0",
     "cuid": "^2.1.8",
     "fast-deep-equal": "2.0.1",
@@ -34,7 +32,7 @@
     "react-redux": "7.0.2",
     "react-redux-typescript-scripts": "1.5.0",
     "react-router-dom": "5.0.0",
-    "react-scripts": "3.0.0",
+    "react-scripts": "^3.4.3",
     "react-testing-library": "6.1.2",
     "react-toastify": "5.1.0",
     "redux": "4.0.1",
@@ -59,7 +57,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/polyfill": "7.4.3",
     "@types/axios": "^0.14.0",
     "@types/cuid": "^1.3.1",
     "@types/jest": "24.0.11",
@@ -70,7 +67,9 @@
     "@types/react-redux": "7.0.8",
     "@types/react-router-dom": "4.3.2",
     "@types/yup": "^0.29.4",
-    "concurrently": "4.1.0",
+    "@typescript-eslint/parser": "^3.9.1",
+    "concurrently": "^5.3.0",
+    "core-js": "^3.6.5",
     "prettier": "^2.0.5"
   },
   "proxy": "http://localhost:4001"
