--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@typescript-eslint/parser": "^3.9.1",
     "concurrently": "^5.3.0",
     "core-js": "^3.6.5",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.0.5"
   },
   "proxy": "http://localhost:4001"
